# small-shell

./: .gitignore  AUTHORS  Makefile.am  README.md  configure.ac
project/: shell.sln  shell.vcxproj  shell.vcxproj.filters
src/: Chain.cxx  Chain.h  Command.cxx  Command.h  Makefile.am  shell.cxx
