AC_INIT([Vertical3D], [0.1], [sigsegv@quantumfish.com], [small-shell], [http://www.quantumfish.com/])
AC_PREREQ([2.59])
AM_INIT_AUTOMAKE([1.10 -Wall no-define])
AC_PROG_CXX
AC_PROG_LIBTOOL
LT_INIT([disable-static])

AC_HEADER_STDC
AC_CHECK_HEADERS([string])
AC_CHECK_HEADERS([iostream])

AC_CONFIG_FILES([
Makefile 
src/Makefile
])

AC_OUTPUT
